--- a/netlify.toml
+++ b/netlify.toml
@@ -9,3 +9,11 @@
   from = "/*"
   to = "/index.html"
   status = 200
+
+# Optional: Uncomment below to set custom security headers
+# [[headers]]
+#   for = "/*"
+#   [headers.values]
+#     X-Frame-Options = "DENY"
+#     X-XSS-Protection = "1; mode=block"
+#     Strict-Transport-Security = "max-age=31536000; includeSubDomains"
